tests/sema/fail/v11_fail_adt_non_exhaustive.ep
# COMPILE_FAIL: non-exhaustive match for Expr; missing Right
type Left = { value: i64 }
type Right = { value: i64 }
type Expr = Left | Right
fun main(): void {
    let e: Expr = new Expr(new Left { value: 1 })
    match e {
        Left l: {
            println(str(l.value))
        }
    }
}
